# tessera-pqc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: demo.ipynb
src/tessera/: __init__.py  cli.py  demo.py  scheduler.py
src/tessera/core/: math.py  primitives.py
src/tessera/hardware/: memory.py  power.py
tests/: test_math.py  test_memory.py  test_primitives.py  test_scheduler.py
