[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-pqc"
version = "0.1.0"
description = "Simulation of Atomic Post-Quantum Cryptography on Intermittent Power"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Research Architect", email = "architect@tessera.local"}
]
dependencies = [
    "numpy",          # Lattice math operations
    "simpy",          # Discrete event simulation for power
    "scipy",          # Polynomial helpers/distributions
    "matplotlib",     # Plotting traces
    "pycryptodome",   # Hashing (SHA3/SHAKE)
]

[project.scripts]
tessera = "tessera.cli:main"
