[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-pqc"
version = "0.1.0"
description = "Simulation of Atomic Post-Quantum Cryptography on Intermittent Power"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Research Architect", email = "architect@tessera.local"}
]
keywords = [
    "post-quantum", "cryptography", "kyber", "ntt", "lattice",
    "intermittent-computing", "iot", "simulation", "pqc"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "simpy>=4.0",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/abhinavgulisetty/tessera-pqc"
Repository = "https://github.com/abhinavgulisetty/tessera-pqc"
Issues = "https://github.com/abhinavgulisetty/tessera-pqc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
notebook = [
    "jupyter>=1.0",
]

[project.scripts]
tessera = "tessera.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
